--- a/index.html
+++ b/index.html
@@ -25,120 +25,7 @@
     <div class="main"></div>
 
 
-   <style>
-.button {
-  border: none;
-  color: white;
-  padding: 2px 4px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-
-
-.button1 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #04AA6D;
-  position: absolute;
-  top: 170px;
-  left: 160px;
-  font-size: 12px;
-  color: blanchedalmond;
-}
-
-.button1:hover {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.button2 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #008CBA;
-  position: absolute;
-  top: 210px;
-  left: 200px;
-  font-size: 12px;
-  color: blanchedalmond;
-}
-
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-
-.button3 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #971212;
-  position: absolute;
-  top: 250px;
-  left: 240px;
-  font-size: 12px;
-  color: blanchedalmond;
-
-}
-
-.button3:hover {
-  background-color: #971212;
-  color: white;
-}
-
-
-.button5 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #04AA6D;
-  position: absolute;
-  top: 170px;
-  left: 550px;
-  font-size: 12px;
-  color: blanchedalmond;
-}
-
-.button5:hover {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.button6 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #008CBA;
-  position: absolute;
-  top: 210px;
-  left: 520px;
-  font-size: 12px;
-  color: blanchedalmond;
-}
-
-.button6:hover {
-  background-color: #008CBA;
-  color: white;
-}
-.button4 {
-  background-color: rgb(0, 0, 0); 
-  color: black; 
-  border: 2px solid #971212;
-  position: absolute;
-  top: 250px;
-  left: 490px;
-  font-size: 12px;
-  color: blanchedalmond;
-
-}
-
-.button4:hover {
-  background-color: #971212;
-  color: white;
-}
-</style>
+   
 
 
 <style>
@@ -189,21 +76,19 @@ body {
 </head>
 
 <body>
-  <button class="button button1">Green</button>
-<button class="button button2">Blue</button>
-<button class="button button3">Red</button>
-<button class="button button5">Green</button>
-<button class="button button6">Blue</button>
-<button class="button button4">Red</button>
-<div class="container mt-3">
-  <h2>Button Outline</h2>
-  <button type="button" class="btn btn-outline-primary">Primary</button>
-  <button type="button" class="btn btn-outline-secondary">Secondary</button>
-  <button type="button" class="btn btn-outline-success">Success</button>
-  <button type="button" class="btn btn-outline-info">Info</button>
-  <button type="button" class="btn btn-outline-warning">Warning</button>
-  <button type="button" class="btn btn-outline-danger">Danger</button>
-  <button type="button" class="btn btn-outline-dark">Dark</button>
+  
+<div class="container mt-5 position-absolute top-50 start-100 translate-middle ">
+
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+</div>
+
+<div class="container mt-3 position-absolute top-50 start-50 translate-middle ">
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+  <button type="button" class="btn btn-primary btn-sm">Small</button>
+</div>
 
 
 </body>
